# WirelessNetwork-basedStreetLightMonitoringSystem

./: README.md  基于无线网络的路灯监控系统需求说明.md
StreetLightControl/: Project.uvguix.76293  Project.uvoptx  Project.uvprojx
StreetLightControl/Hardware/: Key.c  LED.c  LightSensor.c  LightSensor.h  PWM.c  PWM.h  Serial.c  Serial.h  esp8266-01s.c  esp8266-01s.cpp  esp8266-01s.h
StreetLightControl/Json/: Json_parser.c  Json_parser.h  control_dim.json  control_switch.json  status.json
StreetLightControl/Listings/: Project.map  startup_stm32f10x_md.lst
StreetLightControl/Objects/: Project.axf  Project.build_log.htm  Project.htm  Project.lnp  Project_Target 1.dep  cjson.crf  cjson.d  core_cm3.crf  core_cm3.d  delay.crf  delay.d  esp8266-01s.crf  esp8266-01s.d  json_parser.crf  json_parser.d  key.crf  key.d  led.crf  led.d  lightsensor.crf  lightsensor.d  main.crf  main.d  misc.crf  misc.d  oled.crf  oled.d  pwm.crf  pwm.d  serial.crf  serial.d  stm32f10x_adc.crf  stm32f10x_adc.d  stm32f10x_bkp.crf  stm32f10x_bkp.d  stm32f10x_can.crf  stm32f10x_can.d  stm32f10x_cec.crf  stm32f10x_cec.d  stm32f10x_crc.crf  (+39 more)
StreetLightControl/User/: main.c
backEnd/: CMakeLists.txt
backEnd/src/: main.cpp
backEnd/src/config/: config.cpp  config.h  config.json
backEnd/src/core/: LampMonitor.cpp  LampMonitor.h
backEnd/src/http/Handlers/: AuthHandler.cpp  AuthHandler.h
backEnd/src/http/Middleware/: AuthMiddleware.cpp  AuthMiddleware.h  CorsMiddleware.cpp  CorsMiddleware.h  LogMiddleware.cpp  LogMiddleware.h
backEnd/src/http/Models/: User.cpp  User.h
backEnd/src/http/Repositories/: UserRepository.cpp  UserRepository.h
backEnd/src/http/Services/: AuthService.cpp  AuthService.h
backEnd/src/http/Utils/: Constants.h  JsonParser.cpp  JsonParser.h  Jwt.cpp  Jwt.h  PasswordHasher.cpp  PasswordHasher.h
backEnd/src/mqtt/: MQTTClientCpp.cpp  MQTTClientCpp.h
backEnd/src/util/: Logger.h
frontEnd/: .env.development  README.md  index.html  package-lock.json  package.json  vite.config.js
frontEnd/src/: App.vue  main.js
frontEnd/src/api/: index.js
frontEnd/src/assets/styles/: mian.css
frontEnd/src/components/: AlarmManagement.vue  Dashboard.vue  DeviceControl.vue  DeviceOverview.vue  Login.vue  NotFound.vue  Statistics.vue
frontEnd/src/components/common/: ErrorMessage.vue  LoadingSpinner.vue
frontEnd/src/router/: index.js
frontEnd/src/store/: index.js
frontEnd/src/store/modules/: alarms.js  auth.js  devices.js  statistics.js
frontEnd/src/utils/: auth.js  constants.js  request.js
